--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Feminine Profile Page</title>
+<title>🌸Jeŋŋყ🌸</title>
 <!-- Link to external CSS -->
 <link rel="stylesheet" href="styles.css" />
 <!-- Include a nice font for the name -->
@@ -36,12 +36,9 @@
 
 <!-- Chat message block below main content -->
 <div class="chat-message">
-  <p>To chat with me in PM with GIFS  and all features click on the chat button present on the bottom right corner of your screen. If it's not visible, maybe it's loading, just wait for a few seconds and it will appear.</p>
-  <p>Also Join my chatovod room to get this page link and receive updates about me and my friends. Chatovod room is for friendly chat only. For fun, join chatwee chat room.</p>
+  <p>To chat with me click on the chat button present on the bottom right corner of your screen. If it's not visible, maybe it's loading, just wait for a few seconds and it will appear.</p>
 </div>
-
-<!-- Button for chat room, below chat message, above bottom banner -->
-<button class="chat-room-btn" id="visitChatRoom">Visit Chatovod Room for Chat Only</button>
+ 
 
 <!-- Space for second banner pic block -->
 <div class="banner-space"></div>
