--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
   <img src="" alt="Enlarged Image" id="modalImage" />
 </div>
 
+  <!-- Chat Button -->
+<script src="https://chatwee-api.com/v2/script/675866495342154a770a1f52.js"></script>
+  
 <script src="script.js"></script>
 </body>
 </html>
